--- a/collections.toml
+++ b/collections.toml
@@ -74,6 +74,7 @@ canonifyURLs = true
 #
 [params]
     rootPath = "collections/"
+    staticRoot = "https://roytang.net/media/"
 
     # You can use markdown here.
     brand = "Roy Tang"
