--- a/collections.toml
+++ b/collections.toml
@@ -62,6 +62,7 @@ canonifyURLs = true
     rootPath = "collections/"
     staticRoot = "https://roytang.net/media/"
     # staticRoot = "http://localhost/repos/blog/"
+    homeShowRecentItems = false
 
     # You can use markdown here.
     brand = "Roy Tang"
